--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,2 +1,4 @@
 unit.bbunit-bvela.name = Smol vela
 unit.bbunit-bvela.description = cute and smol
+unit.bbunit-bcorvus.name = Smol corvus
+unit.bbunit-bcorvus.description = Smol and deadly
