--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -2,3 +2,5 @@ unit.bbunit-bvela.name = Smol vela
 unit.bbunit-bvela.description = cute and smol
 unit.bbunit-bcorvus.name = Smol corvus
 unit.bbunit-bcorvus.description = Smol and deadly
+unit.bbunit-boct.name = Smol oct
+unit.bbunit-boct.description = Smol and tanky
