added monke to the game

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,6 +1,8 @@
 unit.bbunit-bvela.name = Smol vela
-unit.bbunit-bvela.description = cute and smol
+unit.bbunit-bvela.description = Cute and smol, not capable of breeding.
 unit.bbunit-bcorvus.name = Smol corvus
 unit.bbunit-bcorvus.description = Smol and deadly
 unit.bbunit-boct.name = Smol oct
 unit.bbunit-boct.description = Smol and tanky
+unit.bbunit-bomura.name = Smol omura
+unit.bbunit-bomura.description = Smol and snipey
