--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,8 +1,10 @@
 unit.bbunit-bvela.name = Smol vela
 unit.bbunit-bvela.description = Cute and smol, not capable of breeding.
 unit.bbunit-bcorvus.name = Smol corvus
-unit.bbunit-bcorvus.description = Smol and deadly
+unit.bbunit-bcorvus.description = Smol and deadly, love vela.
 unit.bbunit-boct.name = Smol oct
-unit.bbunit-boct.description = Smol and tanky
+unit.bbunit-boct.description = Smol and tanky, protect its friend with a shield.
 unit.bbunit-bomura.name = Smol omura
-unit.bbunit-bomura.description = Smol and snipey
+unit.bbunit-bomura.description = Smol and snipey.
+unit.bbunit-bminke.name = Smol minke
+unit.bbunit-bminke.description = Smol and shooty.
