GUY ITS THE LORE, ITS THE LORE

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -7,4 +7,4 @@ unit.bbunit-boct.description = Smol and tanky, protect its friend with a shield.
 unit.bbunit-bomura.name = Smol omura
 unit.bbunit-bomura.description = Smol and snipey.
 unit.bbunit-bminke.name = Smol minke
-unit.bbunit-bminke.description = Smol and shooty.
+unit.bbunit-bminke.description = Smol and shooty, Not made out of paper.
