--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -8,3 +8,5 @@ unit.bbunit-bomura.name = Smol omura
 unit.bbunit-bomura.description = Smol and snipey.
 unit.bbunit-bminke.name = Smol minke
 unit.bbunit-bminke.description = Smol and shooty, Not made out of paper.
+unit.bbunit-btoxo.name = Smol toxo
+unit.bbunit-btoxo.description = Smol and spooky, It not here to play, it is here to Fight.
