making a horizon is complex as getting a phD - me

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -9,4 +9,6 @@ unit.bbunit-bomura.description = Smol and snipey.
 unit.bbunit-bminke.name = Smol minke
 unit.bbunit-bminke.description = Smol and shooty, Not made out of paper.
 unit.bbunit-btoxo.name = Smol toxo
-unit.bbunit-btoxo.description = Smol and spooky, It not here to play, it is here to Fight.
+unit.bbunit-btoxo.description = Smol and spooky, It IS not here to play, it is here to Fight.
+unit.bbunit-bhorizon.name = Smol horizon
+unit.bbunit-bhorizon.description = Smol and floaty, Stop adding y to every word.
