world war 3 happened thanks to bquad

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -12,3 +12,5 @@ unit.bbunit-btoxo.name = Smol toxo
 unit.bbunit-btoxo.description = Smol and spooky, It IS not here to play, it is here to Fight.
 unit.bbunit-bhorizon.name = Smol horizon
 unit.bbunit-bhorizon.description = Smol and floaty, Stop adding y to every word.
+unit.bbunit-bhorizon.name = Smol horizon
+unit.bbunit-bhorizon.description = Smol and chonky,repair everything.
