--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -14,3 +14,5 @@ unit.bbunit-bhorizon.name = Smol horizon
 unit.bbunit-bhorizon.description = Smol and floaty, Stop adding y to every word.
 unit.bbunit-bquad.name = Smol quad
 unit.bbunit-bquad.description = Smol and chonky,repair everything.
+unit.bbunit-bsei.name = Smol sei
+unit.bbunit-bsei.description = chonky.
