no sex before marriage

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -15,4 +15,8 @@ unit.bbunit-bhorizon.description = Smol and floaty, Stop adding y to every word.
 unit.bbunit-bquad.name = Smol quad
 unit.bbunit-bquad.description = Smol and chonky,repair everything.
 unit.bbunit-bsei.name = Smol sei
-unit.bbunit-bsei.description = chonky.
+unit.bbunit-bsei.description = haha swarmer go pew pew
+unit.bbunit-bantumbra.name = Smol antumbra
+unit.bbunit-bantumbra.description = Very floaty
+unit.bbunit-beclipse.name = Smol eclipse
+unit.bbunit-beclipse.description = Very c h o n k
